Fixed overflow issues on errors

--- a/styles/error.css
+++ b/styles/error.css
@@ -1,3 +1,10 @@
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  height: 100vh !important;
+  width: 100vw !important;
+}
+
 .bg {
   position: absolute;
   top: 0px;
